add first section without elipse

--- a/src/css/normalize.css
+++ b/src/css/normalize.css
@@ -306,204 +306,4 @@ template {
  */
 [hidden] {
   display: none;
-}
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-.elipse {
-  width: 194px;
-  height: 194px;
-  background: linear-gradient(143.92deg, rgba(237, 123, 80, 0.5) 14.85%, rgba(72, 138, 234, 0.5) 53.25%, rgba(44, 44, 44, 0.5) 85.74%);
-  border-radius: 150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.elipse__subtract {
-  width: 129.33px;
-  height: 129.33px;
-  background: #F0F0F0;
-  border-radius: 150px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.section {
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
-.main-section {
-  background-color: #F0F0F0;
-}
-.main-section__header {
-  display: flex;
-  padding: 16px 19px 0px 23px;
-  justify-content: space-between;
-  align-items: center;
-}
-.main-section__logo {
-  width: 134px;
-  height: 69px;
-}
-.main-section__content {
-  display: flex;
-  position: relative;
-}
-
-.nav {
-  color: black;
-}
-.nav__list {
-  display: flex;
-}
-.nav__link a {
-  color: black;
-  text-decoration: none;
-}
-.nav__link:not(:last-child) {
-  margin-right: 60px;
-}
-
-.left-wrapper__photo {
-  position: relative;
-  z-index: 3;
-}
-.left-wrapper__rectangle-blue {
-  background-color: #5290EA;
-  width: 565.949px;
-  height: 220px;
-  transform: rotate(-64.003deg);
-  border-radius: 100px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  position: absolute;
-  top: 150px;
-  left: -50px;
-}
-.left-wrapper__rectangle-orange {
-  background-color: #F28B64;
-  width: 618.428px;
-  height: 220px;
-  transform: rotate(-50.806deg);
-  border-radius: 100px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  position: absolute;
-  left: -30px;
-  top: 160px;
-  z-index: 2;
-}
-.left-wrapper__rectangle-grey {
-  background-color: #E2E2E2;
-  width: 608.968px;
-  height: 220px;
-  transform: rotate(-36.15deg);
-  border-radius: 100px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  position: absolute;
-  left: 10px;
-  top: 190px;
-}
-
-.right-wrapper {
-  position: absolute;
-  z-index: 4;
-  top: 150px;
-  right: 76px;
-  width: 372px;
-}
-.right-wrapper__tittle {
-  font-size: 72px;
-  line-height: 93.9%;
-}
-.right-wrapper__line {
-  width: 65px;
-  border: none;
-  border-top: 1px solid #000;
-  margin: 0;
-  margin-bottom: 5px;
-}
-.right-wrapper__text {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
-.right-wrapper__icon:not(:last-child) {
-  margin-right: 17px;
-}
-
-.registration {
-  display: flex;
-  align-items: center;
-}
-.registration__text {
-  font-size: 16px;
-}
-.registration__button {
-  width: 200px;
-  height: 60px;
-  border-radius: 100px;
-  background: #F28B64;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  color: #fff;
-  text-align: center;
-  font-size: 18px;
-  border: none;
-  margin-right: 32px;
-}
-.registration__link-social {
-  margin-right: 12px;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=normalize.css.map */
