--- a/src/css/repeat.css
+++ b/src/css/repeat.css
@@ -1,1 +1,14 @@
-/*# sourceMappingURL=repeat.css.map */
+.section {
+  max-width: 1140px;
+  margin: 0 auto;
+  position: relative;
+}
+
+h2 {
+  font-size: 72px;
+  line-height: 89.9%;
+}
+
+h4 {
+  font-size: 48px;
+}/*# sourceMappingURL=repeat.css.map */
