--- a/src/css/style.css
+++ b/src/css/style.css
@@ -361,7 +361,22 @@ table {
   border-spacing: 0;
 }
 
-.elipse {
+.section {
+  max-width: 1140px;
+  margin: 0 auto;
+  position: relative;
+}
+
+h2 {
+  font-size: 72px;
+  line-height: 89.9%;
+}
+
+h4 {
+  font-size: 48px;
+}
+
+.elipse-s {
   width: 194px;
   height: 194px;
   background: linear-gradient(143.92deg, rgba(237, 123, 80, 0.5) 14.85%, rgba(72, 138, 234, 0.5) 53.25%, rgba(44, 44, 44, 0.5) 85.74%);
@@ -371,24 +386,25 @@ table {
   align-items: center;
 }
 
-.elipse__subtract {
-  width: 129.33px;
-  height: 129.33px;
-  background: #F0F0F0;
+.elipse-m {
+  width: 282px;
+  height: 282px;
+  background: linear-gradient(143.92deg, rgba(237, 123, 80, 0.5) 14.85%, rgba(72, 138, 234, 0.5) 53.25%, rgba(44, 44, 44, 0.5) 85.74%);
   border-radius: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 * {
   box-sizing: border-box;
 }
 
-.section {
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
 .main-section {
   background-color: #F0F0F0;
+  position: relative;
+  min-height: 800px;
+  overflow: hidden;
 }
 .main-section__header {
   display: flex;
@@ -403,6 +419,16 @@ table {
 .main-section__content {
   display: flex;
   position: relative;
+}
+.main-section__first-elipse {
+  position: absolute;
+  top: 129px;
+  right: 80px;
+}
+.main-section__second-elipse {
+  position: absolute;
+  right: -120px;
+  top: 650px;
 }
 
 .nav {
@@ -465,6 +491,9 @@ table {
   right: 76px;
   width: 372px;
 }
+.right-wrapper__social {
+  position: relative;
+}
 .right-wrapper__tittle {
   font-size: 72px;
   line-height: 93.9%;
@@ -472,7 +501,7 @@ table {
 .right-wrapper__line {
   width: 65px;
   border: none;
-  border-top: 1px solid #000;
+  border-top: 1px solid black;
   margin: 0;
   margin-bottom: 5px;
 }
@@ -481,7 +510,7 @@ table {
   margin-bottom: 20px;
 }
 
-.right-wrapper__icon:not(:last-child) {
+.social__icon:not(:last-child) {
   margin-right: 17px;
 }
 
@@ -506,4 +535,214 @@ table {
 }
 .registration__link-social {
   margin-right: 12px;
+}
+
+.elipse-s__subtract {
+  background-color: #F0F0F0;
+  width: 129.33px;
+  height: 129.33px;
+  border-radius: 150px;
+}
+
+.elipse-m__subtract {
+  background-color: #F0F0F0;
+  width: 188px;
+  height: 188px;
+  transform: rotate(45deg);
+  border-radius: 188px;
+}
+
+.type-lessons {
+  padding-top: 32px;
+  min-height: 700px;
+}
+.type-lessons hr {
+  width: 94px;
+  border: none;
+  border-top: 1px solid black;
+  margin: 0;
+  margin-bottom: 40px;
+}
+.type-lessons__guitars {
+  margin-bottom: 20px;
+}
+.type-lessons__in-numbers {
+  margin-bottom: 56px;
+}
+
+.guitar {
+  display: flex;
+  justify-content: space-between;
+}
+.guitar__block_grey {
+  background-color: #E2E2E2;
+  width: 360px;
+  height: 360px;
+  border-radius: 10px;
+  font-size: 36px;
+  display: flex;
+  padding-top: 25px;
+  position: relative;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.guitar__first-elipse {
+  position: absolute;
+  top: 200px;
+  left: -86px;
+  z-index: -1;
+}
+.guitar__block_orange {
+  background-color: #f28b64;
+  width: 360px;
+  height: 360px;
+  border-radius: 10px;
+  font-size: 36px;
+  display: flex;
+  padding-top: 25px;
+  position: relative;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.guitar__block_blue {
+  background-color: #5290EA;
+  width: 360px;
+  height: 360px;
+  border-radius: 10px;
+  font-size: 36px;
+  display: flex;
+  padding-top: 25px;
+  position: relative;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.guitar__second-elipse {
+  position: absolute;
+  top: -100px;
+  left: 215px;
+  z-index: -1;
+  transform: rotate(41.35deg);
+}
+.guitar__name {
+  transform: rotate(90deg);
+  position: absolute;
+  left: 163px;
+  top: 150px;
+}
+.guitar .elipse-s__subtract {
+  background-color: #fff;
+}
+
+.in-numbers {
+  display: flex;
+  justify-content: space-around;
+}
+.in-numbers img {
+  margin-right: 20px;
+}
+.in-numbers__block {
+  display: flex;
+}
+.in-numbers__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.in-numbers__text {
+  font-size: 18px;
+}
+
+.text-about {
+  background-color: #F0F0F0;
+  min-height: 640px;
+  position: relative;
+  overflow: hidden;
+}
+.text-about__section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 167px;
+  padding-top: 47px;
+}
+.text-about__left-wrapper {
+  position: relative;
+}
+.text-about__tittle {
+  position: relative;
+  z-index: 2;
+}
+.text-about hr {
+  width: 70px;
+  border: none;
+  border-top: 1px solid black;
+  margin: 0;
+}
+.text-about__rectangle-striped {
+  position: absolute;
+  top: -34px;
+  left: -165px;
+  z-index: 1;
+}
+.text-about__first-elipse {
+  position: absolute;
+  top: -124px;
+  left: -103px;
+}
+.text-about__right-wrapper {
+  max-width: 480px;
+}
+.text-about__second-elipse {
+  position: absolute;
+  right: -120px;
+  top: -120px;
+  transform: rotate(-48.201deg);
+}
+
+.tittle-hr {
+  width: 70px;
+  border: none;
+  border-top: 1px solid black;
+  margin: 0;
+  position: absolute;
+  bottom: 65px;
+}
+
+.main-text__tittle {
+  position: relative;
+  margin-bottom: 20px;
+}
+.main-text hr {
+  position: absolute;
+  bottom: 66px;
+}
+.main-text__paragraph {
+  font-size: 18px;
+}
+.main-text__paragraph_first {
+  margin-bottom: 20px;
+}
+.main-text__paragraph_second {
+  margin-bottom: 30px;
+}
+.main-text__registration {
+  margin-bottom: 46px;
+}
+
+.footer__content {
+  min-height: 272px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.footer__img {
+  position: absolute;
+  left: -250px;
+  bottom: -150px;
+}
+.footer__tittle {
+  margin-bottom: 20px;
+  position: relative;
 }/*# sourceMappingURL=style.css.map */
