--- a/src/sass/repeat.sass
+++ b/src/sass/repeat.sass
@@ -1,7 +1,25 @@
 $bg-section: #F0F0F0
 $color-blue: #5290EA
 $color-red: #f28b64
+$rotate90: rotate(90deg)
 
+.section
+    max-width: 1140px
+    margin: 0 auto
+    position: relative
+
+h2
+    font-size: 72px
+    line-height: 89.9%
+
+h4
+    font-size: 48px
+
+@mixin hr ($width)
+    width: $width
+    border: none
+    border-top: 1px solid black
+    margin: 0
 @mixin rectangle ($bg, $width, $height, $transform)
     background-color: $bg
     width: $width
@@ -21,6 +39,18 @@ $color-red: #f28b64
     font-size: 18px
     border: none
 
+@mixin guitar__block($bg)
+    background-color: $bg
+    width: 360px
+    height: 360px
+    border-radius: 10px
+    font-size: 36px
+    display: flex
+    padding-top: 25px
+    position: relative
+    text-align: center
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+
 %elipse-s
     width: 194px
     height: 194px
@@ -30,25 +60,24 @@ $color-red: #f28b64
     justify-content: center
     align-items: center
 
-%subtract-s
+@mixin subtract-s ($bgc)
+    background-color: $bgc
     width: 129.33px
     height: 129.33px
-    background: #F0F0F0
     border-radius: 150px
 
-@mixin elipse-m
+%elipse-m
     width: 282px
     height: 282px
+    background: linear-gradient(143.92deg, rgba(237, 123, 80, 0.5) 14.85%, rgba(72, 138, 234, 0.5) 53.25%, rgba(44, 44, 44, 0.5) 85.74%)
+    border-radius: 150px
     display: flex
-    align-items: center
     justify-content: center
-    transform: rotate(45deg)
-    border-radius: 188px
-    background-color: linear-gradient(144deg, #ED7B50 0%, #488AEA 54.17%, #2C2C2C 100%)
+    align-items: center
 
-@mixin subtract-m
+@mixin subtract-m ($bg)
+    background-color: $bg
     width: 188px
     height: 188px
     transform: rotate(45deg)
     border-radius: 188px
-    background-color: : #C4C4C4
