--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,15 +1,15 @@
 @import "normalize.scss"
 @import "reset.scss"
-@import "repeat"
+@import "repeat.sass"
+
 *
     box-sizing: border-box
-.section
-    max-width: 1140px
-    margin: 0 auto
 
 .main-section
-    background-color: red
-    // не реагирует блок
+    background-color: $bg-section
+    position: relative
+    min-height: 800px
+    overflow: hidden
     &__header
         display: flex
         padding: 16px 19px 0px 23px
@@ -20,11 +20,15 @@
         height: 69px
     &__content
         display: flex
+        position: relative
     &__first-elipse
         position: absolute
         top: 129px
         right: 80px
-
+    &__second-elipse
+        position: absolute
+        right: -120px
+        top: 650px
 .nav
     color: black
     &__list
@@ -69,15 +73,12 @@
         font-size: 72px
         line-height: 93.9%
     &__line
-        width: 65px
-        border: none
-        border-top: 1px solid #000
-        margin: 0
+        @include hr (65px)
         margin-bottom: 5px
     &__text
         font-size: 16px
         margin-bottom: 20px
-.right-wrapper__icon:not(:last-child)
+.social__icon:not(:last-child)
     margin-right: 17px
 .registration
     display: flex
@@ -90,7 +91,134 @@
     &__link-social
         margin-right: 12px
 
-.elipse
+.elipse-s
     @extend %elipse-s
     &__subtract
-        @extend %subtract-s
+        @include subtract-s (#F0F0F0)
+
+.elipse-m
+    @extend %elipse-m
+    &__subtract
+        @include subtract-m (#F0F0F0)
+
+.type-lessons
+    padding-top: 32px
+    min-height: 700px
+    hr
+        @include hr (94px)
+        margin-bottom: 40px
+    &__guitars
+        margin-bottom: 20px
+    &__in-numbers
+        margin-bottom: 56px
+
+.guitar
+    display: flex
+    justify-content: space-between
+    &__block_grey
+        @include guitar__block (#E2E2E2)
+        position: relative
+    &__first-elipse
+        position: absolute
+        top: 200px
+        left: -86px
+        z-index: -1
+    &__block_orange
+        @include guitar__block ($color-red)
+    &__block_blue
+        @include guitar__block ($color-blue)
+        position: relative
+    &__second-elipse
+        position: absolute
+        top: -100px
+        left: 215px
+        z-index: -1
+        transform: rotate(41.35deg)
+    &__name
+        transform: $rotate90
+        position: absolute
+        left: 163px
+        top: 150px
+    .elipse-s
+        &__subtract
+            background-color: #fff
+.in-numbers
+    display: flex
+    justify-content: space-around
+    img
+        margin-right: 20px
+    &__block
+        display: flex
+    &__content
+        display: flex
+        flex-direction: column
+        justify-content: space-evenly
+    &__text
+        font-size: 18px
+
+.text-about
+    background-color: $bg-section
+    min-height: 640px
+    position: relative
+    overflow: hidden
+    &__section
+        display: flex
+        align-items: center
+        justify-content: space-between
+        padding-left: 167px
+        padding-top: 47px
+    &__left-wrapper
+        position: relative
+    &__tittle
+        position: relative
+        z-index: 2
+    hr
+        @include hr (70px)
+    &__rectangle-striped
+        position: absolute
+        top: -34px
+        left: -165px
+        z-index: 1
+    &__first-elipse
+        position: absolute
+        top: -124px
+        left: -103px
+    &__right-wrapper
+        max-width: 480px
+    &__second-elipse
+        position: absolute
+        right: -120px
+        top: -120px
+        transform: rotate(-48.201deg)
+.tittle-hr
+    @include hr (70px)
+    position: absolute
+    bottom: 65px
+.main-text
+    &__tittle
+        position: relative
+        margin-bottom: 20px
+    hr
+        position: absolute
+        bottom: 66px
+    &__paragraph
+        font-size: 18px
+        &_first
+            margin-bottom: 20px
+        &_second
+            margin-bottom: 30px
+    &__registration
+        margin-bottom: 46px
+.footer
+    &__content
+        min-height: 272px
+        display: flex
+        align-items: center
+        justify-content: flex-end
+    &__img
+        position: absolute
+        left: -250px
+        bottom: -150px
+    &__tittle
+        margin-bottom: 20px
+        position: relative
