--- a/src/css/style.css
+++ b/src/css/style.css
@@ -396,6 +396,26 @@ h4 {
   align-items: center;
 }
 
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.ttf");
+  font-weight: regular;
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-SemiBold.ttf");
+  font-weight: bold;
+}
+html {
+  font-family: "Montserrat";
+  font-weight: regular;
+}
+
+h1, h2, h3, h4, button {
+  font-family: "Montserrat";
+  font-weight: bold;
+}
+
 * {
   box-sizing: border-box;
 }
