--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,22 @@
 @import "reset.scss"
 @import "repeat.sass"
 
+@font-face
+    font-family: 'Montserrat'
+    src: url('../fonts/Montserrat-Regular.ttf')
+    font-weight: regular
+@font-face
+    font-family: 'Montserrat'
+    src: url('../fonts/Montserrat-SemiBold.ttf')
+    font-weight: bold
+
+html
+    font-family: 'Montserrat'
+    font-weight: regular
+h1, h2, h3, h4, button
+    font-family: 'Montserrat'
+    font-weight: bold
+
 *
     box-sizing: border-box
 
