--- a/src/sass/repeat.sass
+++ b/src/sass/repeat.sass
@@ -3,7 +3,7 @@ $color-blue: #5290EA
 $color-red: #f28b64
 $rotate90: rotate(90deg)
 
-.section
+.container
     max-width: 1140px
     margin: 0 auto
     position: relative
@@ -39,8 +39,7 @@ h4
     font-size: 18px
     border: none
 
-@mixin guitar__block($bg)
-    background-color: $bg
+@mixin guitar__block
     width: 360px
     height: 360px
     border-radius: 10px
