--- a/src/css/style.css
+++ b/src/css/style.css
@@ -975,7 +975,7 @@ h1, h2, h3, h4, button {
   .in-numbers {
     flex-wrap: wrap;
     row-gap: 15px;
-    padding-left: 20%;
+    padding-left: 20;
   }
   .in-numbers__block_second {
     width: 50%;
