--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -400,7 +400,7 @@ h1, h2, h3, h4, button
     .in-numbers
         flex-wrap: wrap
         row-gap: 15px
-        padding-left: 20%
+        padding-left: 20
         &__block_second
             width: 50%
         &__block_fourth
