--- a/src/css/style.css
+++ b/src/css/style.css
@@ -455,15 +455,19 @@ h1, h2, h3, h4, button {
 .nav {
   color: black;
 }
-.nav__list {
+.nav__links {
   display: flex;
 }
-.nav__link a {
+.nav__links a {
   color: black;
   text-decoration: none;
+  font-weight: bold;
 }
 .nav__link:not(:last-child) {
   margin-right: 60px;
+}
+.nav .registration {
+  display: none;
 }
 
 .left-wrapper__photo {
@@ -1061,7 +1065,236 @@ h1, h2, h3, h4, button {
     width: 540px;
   }
   .header__nav {
+    position: absolute;
+    top: 10px;
+    right: -100%;
+    min-height: 190px;
+    height: 50vh;
+    width: 50%;
+    background-color: #E2E2E2;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 20;
+    transition: 0.6s all;
+  }
+  .header__nav .nav__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    align-items: start;
+  }
+  .header__nav .nav__links {
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 30px;
+  }
+  .header__nav .nav__link {
+    margin-right: 0;
+    font-size: 18px;
+  }
+  .header__nav .registration {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
+    height: 25vh;
+    padding-left: 30px;
+  }
+  .header__nav .registration__button {
+    width: 222px;
+    min-height: 40px;
+  }
+  .header__nav .registration__button br {
     display: none;
+  }
+  .header__nav .registration__form {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  .header__nav .registration__text {
+    font-size: 12px;
+  }
+  .header__nav .registration__link-social img {
+    width: 30px;
+  }
+  .hamburger {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 40px;
+    right: 30px;
+    z-index: 30;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #E2E2E2;
+    border-radius: 7px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .hamburger__line {
+    height: 2px;
+    background-color: #000;
+    width: 30px;
+    margin-bottom: 4px;
+    transition: 1s all;
+  }
+  .hamburger__line:last-child {
+    margin-bottom: 0;
+  }
+  .hamburger_active .hamburger__line {
+    margin-bottom: -2px;
+  }
+  .hamburger_active .hamburger__line:nth-child(1) {
+    transform: rotate(-45deg);
+  }
+  .hamburger_active .hamburger__line:nth-child(2) {
+    display: none;
+  }
+  .hamburger_active .hamburger__line:nth-child(3) {
+    transform: rotate(45deg);
+  }
+  .nav_active {
+    right: 0;
+  }
+  .left-wrapper__photo {
+    height: 424px;
+    width: 529px;
+  }
+  .left-wrapper__rectangle-blue {
+    left: -93px;
+    transform: rotate(-80deg);
+    opacity: 0.5;
+  }
+  .left-wrapper__rectangle-orange {
+    left: -67px;
+    transform: rotate(-58deg);
+    width: 446px;
+    opacity: 0.5;
+  }
+  .left-wrapper__rectangle-grey {
+    left: -27px;
+    transform: rotate(-40deg);
+  }
+  .social__icon {
+    margin-right: 10px;
+  }
+  .right-wrapper {
+    top: 50px;
+  }
+  .right-wrapper__tittle {
+    margin-bottom: 59px;
+  }
+  .right-wrapper__text {
+    max-width: 243px;
+    font-weight: bold;
+    text-align: center;
+  }
+  .registration__button {
+    margin-right: 23px;
+  }
+  .registration__form {
+    display: none;
+  }
+  h2 {
+    font-size: 45px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  .elipse-s {
+    width: 155px;
+    height: 155px;
+  }
+  .elipse-s__subtract {
+    width: 103px;
+    height: 103px;
+  }
+  .type-lessons {
+    min-height: 470px;
+  }
+  .type-lessons hr {
+    margin-bottom: 20px;
+  }
+  .guitar__block {
+    width: 171px;
+    height: 190px;
+  }
+  .guitar__picture {
+    width: 97px;
+    height: 165px;
+  }
+  .guitar__name {
+    left: 81px;
+    top: 77px;
+  }
+  .guitar__block_orange .guitar__name {
+    left: 57px;
+  }
+  .guitar__first-elipse {
+    top: 66px;
+    left: -69px;
+  }
+  .guitar__second-elipse {
+    top: -166px;
+    left: 112px;
+  }
+  .in-numbers__icon {
+    width: 58px;
+    height: 64px;
+    margin-right: 10px;
+  }
+  .in-numbers__text {
+    font-size: 16px;
+  }
+  .text-about {
+    min-height: 548px;
+  }
+  .text-about__rectangle-striped {
+    opacity: 0.6;
+    top: -78px;
+    left: -18px;
+  }
+  .text-about__first-elipse {
+    opacity: 0.3;
+    top: -139px;
+    left: 70px;
+  }
+  .text-about__tittle {
+    display: none;
+  }
+  .text-about__section {
+    padding-top: 35px;
+  }
+  .main-text {
+    position: relative;
+    z-index: 10;
+  }
+  .main-text hr {
+    bottom: 39px;
+  }
+  .main-text__registration {
+    margin-bottom: 0px;
+  }
+  .footer__content {
+    min-height: 127px;
+  }
+  .footer__content .footer__wrapper hr {
+    bottom: 31px;
+  }
+  .footer__tittle {
+    font-size: 35px;
+  }
+  .footer__img {
+    width: 261px;
+    height: 115px;
+    left: -20px;
+  }
+  .footer .social__icon:not(:last-child) {
+    margin-right: 10px;
   }
 }
 @media (max-width: 575px) {
