--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -48,15 +48,16 @@ h1, h2, h3, h4, button
         top: 610px
 .nav
     color: black
-    &__list
+    &__links
         display: flex
-    &__link
         a
             color: black
             text-decoration: none
-        &:not(:last-child)
-            margin-right: 60px
-
+            font-weight: bold
+    &__link:not(:last-child)
+        margin-right: 60px
+    .registration
+        display: none
 .left-wrapper
     &__photo
         position: relative
@@ -468,8 +469,191 @@ h1, h2, h3, h4, button
     .container
         width: 540px
     .header__nav
-        display: none
-    
+        position: absolute
+        top: 10px
+        right: -100%
+        min-height: 190px
+        height: 50vh
+        width: 50%
+        background-color: #E2E2E2
+        border-radius: 10px
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        z-index: 20
+        transition: 0.6s all
+        .nav__list
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
+            height: 100%
+            align-items: start
+        .nav__links
+            height: 25vh
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
+            padding-left: 30px
+        .nav__link
+            margin-right: 0
+            font-size: 18px
+        .registration
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
+            align-items: start
+            height: 25vh
+            padding-left: 30px
+            &__button
+                width: 222px
+                min-height: 40px
+                br
+                    display: none
+            &__form
+                display: flex
+                margin-bottom: 10px
+            &__text
+                font-size: 12px
+            &__link-social
+                img
+                    width: 30px
+    .hamburger
+        width: 45px
+        height: 45px
+        position: absolute
+        top: 40px
+        right: 30px
+        z-index: 30
+        display: flex
+        align-items: center
+        justify-content: center
+        flex-direction: column
+        background-color: #E2E2E2
+        border-radius: 7px
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        &__line
+            height: 2px
+            background-color: #000
+            width: 30px
+            margin-bottom: 4px
+            transition: 1s all
+            &:last-child
+                margin-bottom: 0
+    .hamburger_active
+        .hamburger__line
+            margin-bottom: -2px
+            &:nth-child(1)
+                transform: rotate(-45deg)
+            &:nth-child(2)
+                display: none
+            &:nth-child(3)
+                transform: rotate(45deg)
+    .nav_active
+        right: 0
+    .left-wrapper
+        &__photo
+            height: 424px
+            width: 529px
+        &__rectangle-blue
+            left: -93px
+            transform: rotate(-80deg)
+            opacity: 0.5
+        &__rectangle-orange
+            left: -67px
+            transform: rotate(-58deg)
+            width: 446px
+            opacity: 0.5
+        &__rectangle-grey
+            left: -27px
+            transform: rotate(-40deg)
+    .social__icon
+        margin-right: 10px
+    .right-wrapper
+        top: 50px
+        &__tittle
+            margin-bottom: 59px
+        &__text
+            max-width: 243px
+            font-weight: bold
+            text-align: center
+    .registration
+        &__button
+            margin-right: 23px
+        &__form
+            display: none
+    h2
+        font-size: 45px
+    h3
+        font-size: 20px
+    .elipse-s
+        width: 155px
+        height: 155px
+        &__subtract
+            width: 103px
+            height: 103px
+    .type-lessons
+        min-height: 470px
+        hr
+            margin-bottom: 20px
+    .guitar
+        &__block
+            width: 171px
+            height: 190px
+        &__picture
+            width: 97px
+            height: 165px
+        &__name
+            left: 81px
+            top: 77px
+        &__block_orange
+            .guitar__name
+                left: 57px
+        &__first-elipse
+            top: 66px
+            left: -69px
+        &__second-elipse
+            top: -166px
+            left: 112px
+    .in-numbers
+        &__icon
+            width: 58px
+            height: 64px
+            margin-right: 10px
+        &__text
+            font-size: 16px
+    .text-about
+        min-height: 548px
+        &__rectangle-striped
+            opacity: 0.6
+            top: -78px
+            left: -18px
+        &__first-elipse
+            opacity: 0.3
+            top: -139px
+            left: 70px
+        &__tittle
+            display: none
+        &__section
+            padding-top: 35px
+    .main-text
+        position: relative
+        z-index: 10
+        hr
+            bottom: 39px
+        &__registration
+            margin-bottom: 0px
+    .footer
+        &__content
+            min-height: 127px
+            .footer__wrapper
+                hr
+                    bottom: 31px
+        &__tittle
+            font-size: 35px
+        &__img
+            width: 261px
+            height: 115px
+            left: -20px
+        .social__icon:not(:last-child)
+            margin-right: 10px
 
 @media (max-width: 575px)
     .container
