--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -658,3 +658,130 @@ h1, h2, h3, h4, button
 @media (max-width: 575px)
     .container
         width: 100%
+    .hamburger
+        width: 38px
+        height: 38px
+        top: 24px
+    .main-section
+        &__content
+            position: relative
+        &__logo
+            width: 107px
+            height: 59px
+    .left-wrapper
+        position: absolute
+        width: 320px
+        height: 420px
+        top: 50%
+        left: 50%
+        margin-left: -160px
+        margin-top: 2px
+        &__photo
+            display: none
+        &__rectangle-blue
+            left: -105px
+            width: 391px
+            top: 144px
+        &__rectangle-orange
+            left: -78px
+            transform: rotate(-65deg)
+            opacity: 0.8
+            height: 132px
+            width: 407px
+            top: 153px
+        &__rectangle-grey
+            width: 397px
+            transform: rotate(-48deg)
+            left: -38px
+            top: 180px
+    .right-wrapper
+        position: absolute
+        align-items: center
+        right: 0px
+        top: 90px
+        width: 100%
+        &__tittle
+            margin-bottom: 16px
+    .registration__button
+        padding: 0
+        margin: 0
+    .social__icon_last
+        margin: 0
+    .type-lessons
+        margin-bottom: 20px
+        &__tittle
+            position: relative
+            display: block
+            margin: 0 auto
+            width: 253px
+            margin-bottom: 20px
+        &__guitars
+            display: flex
+            flex-direction: column
+            align-items: center
+            margin: 0px
+
+    .guitar
+        &__block
+            margin-bottom: 20px
+        &__first-elipse
+            top: 121px
+        &__second-elipse
+            top: -78px
+            left: 85px
+    .in-numbers
+        grid-template-columns: 25% 1fr 10px 1fr 25%
+        grid-template-rows: 1fr 1fr 1fr
+        &__block_first
+            grid-column: 2/5
+            justify-content: center
+        &__block_second
+            grid-column: 2/3
+        &__block_third
+            grid-column: 4/5
+        &__block_fourth
+            grid-column: 2/5
+            justify-content: center
+    .text-about
+        min-height: 472px
+        &__section
+            display: flex
+            justify-content: center
+            padding-left: 20px
+        &__right-wrapper
+            min-width: 307px
+        &__rectangle-striped
+            left: 20px
+            top: -108px
+            width: 160px
+            height: 160px
+        &__first-elipse
+            top: -145px
+            left: 86px
+        .elipse-m
+            width: 160px
+            height: 160px
+            &__subtract
+                width: 106px
+                height: 106px
+    .main-text
+        margin-bottom: 25px
+        &__paragraph
+            font-size: 16px
+        span
+            display: none
+        .registration__button
+            font-size: 14px
+    .footer
+        &__content
+            display: flex
+            position: relative
+            justify-content: center
+            align-items: center
+        &__img
+            opacity: 0.6
+            z-index: -1
+            display: absolute
+        &__wrapper
+            margin: 0
+            padding: 0
